--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,8 +2,8 @@ name: Run the integration tests
 
 on:
     push:
-        # branches:
-        #     - main
+        branches:
+            - main
 
 jobs:
     integrationtests:
