--- a/.github/workflows/testing-and-deployment.yml
+++ b/.github/workflows/testing-and-deployment.yml
@@ -9,11 +9,12 @@ jobs:
   integrationtests:
     runs-on: ubuntu-latest
     env:
-      DB_PORT: 3306
+      MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
       DB_HOST: localhost
-      DB_USER: root
-      DB_PASSWORD:
+      DB_PORT: 3306
       DB_DATABASE: shareameal
+      DB_USER: root
+      DB_PASSWORD: root
     services:
       mysql:
         image: mysql:5.7
