--- a/.github/workflows/testing-and-deployment.yml
+++ b/.github/workflows/testing-and-deployment.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: npm test
         run: |
-          npm test -- --DB_PASSWORD ${{env.MYSQL_ROOT_PASSWORD}} --DB_USER root --DB_NAME ${{env.DB_DATABASE}}
+          npm test
 
   # Railway-deploy:
   #   needs: integrationtests
