--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon index",
-    "test": "mocha test/**/*.test.js -- timeout 10000 --exit"
+    "test": "mocha test/**/*.test.js --exit"
   },
   "author": "",
   "license": "ISC",
