--- a/.github/workflows/testing-and-deployment.yml
+++ b/.github/workflows/testing-and-deployment.yml
@@ -21,7 +21,8 @@ jobs:
         image: mysql:5.7
         ports:
           - "3306"
-        environment: -MYSQL_ROOT_PASSWORD=root
+        env:
+          MYSQL_ROOT_PASSWORD: root
 
     steps:
       - uses: actions/checkout@main
