--- a/.github/workflows/testing-and-deployment.yml
+++ b/.github/workflows/testing-and-deployment.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
-      DB_HOST: "127.0.0.1"
-      DB_PORT: "3306"
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
       DB_DATABASE: shareameal
       DB_USER: root
       DB_PASSWORD: root
@@ -21,6 +21,9 @@ jobs:
         image: mysql:5.7
         ports:
           - "3306"
+        env:
+          MYSQL_ROOT_PASSWORD: root
+
     steps:
       - uses: actions/checkout@main
 
@@ -40,6 +43,29 @@ jobs:
         run: |
           npm install
 
+      - run: npm ci
+
       - name: npm test
         run: |
-          npm test -- --DB_PASSWORD {{env.MYSQL_ROOT_PASSWORD}} --DB_USER root --DB_NAME ${{env.DB_DATABASE}}
+          npm test -- --DB_PASSWORD ${{env.MYSQL_ROOT_PASSWORD}} --DB_USER root --DB_NAME ${{env.DB_DATABASE}}
+
+  # Railway-deploy:
+  #   needs: integrationtests
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: Railway # naam van mijn environment op GitHub
+  #   steps:
+  #     - name: Clone repository
+  #       uses: actions/checkout@main
+
+  #     - name: "Current token"
+  #       run: |
+  #         echo "secrets.RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}"
+
+  #     - name: Install Railway
+  #       run: npm i -g @railway/cli
+
+  #     - name: Deploy server to Railway
+  #       run: railway up
+  #       env:
+  #         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
