--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "chai-match": "^1.1.1",
     "nodemon": "^2.0.22"
   }
 }
